# open-health-statistics

./: .gitignore  .nojekyll  README.md  about.html  blog.md  config.toml  config.yaml  github.py  github_api_call.html  index.html  index.md  org_list.yaml  pyproject.toml  requirements.txt  robots.txt  run.py  search.json  setup.py  sitemap.xml
.github/workflows/: main.yml  pipeline_run.yml  quarto.yml
Documentation/: github_api_call.html
_includes/: NHSUK_table.html  plotly_chart.html  update.html
_layouts/: default.html
assets/data/: openhealthstats.csv
data/: org_repos_agg.csv
docs/: .gitignore  _quarto.yml  about.qmd  github_api_call.qmd  index.qmd
docs/_freeze/index/execute-results/: html.json
docs/orgs/: index.qmd
docs/pages/: github_api_call.qmd
github_api/: github.py  org_list.yaml  run.py
open_health_stats/: analysis.py  data_processing.py  org_github_api_call.py  run.py
open_health_stats/data/: org_repos_agg.csv
open_health_stats/utilities/: github_api_call.py  github_api_calls.py  utilities.py
pages/: github_api_call.html
site_libs/bootstrap/: bootstrap-da7b950bd67b3e472e2fa6515df270f6.min.css  bootstrap-df7260c4d4abb70d94d26d5869cc4bfd.min.css  bootstrap.min.css
src/ingestion/: github_api_call.py
src/processing/: data_processing.py
